parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declist start funlist entrypoint stmtlist
Rule 2     start -> <empty>
Rule 3     entrypoint -> <empty>
Rule 4     fun -> DEF fun_name ( idlist ) block
Rule 5     fun -> DEF fun_name ( ) block
Rule 6     fun_name -> ID
Rule 7     stmt -> PRINT ( expr ) ;
Rule 8     stmt -> PRINTLN ( ) ;
Rule 9     stmt -> WHILE new_label ( expr ) jz block
Rule 10    stmt -> IF ( expr ) jz block
Rule 11    stmt -> IF ( expr ) jz block ELSE jmp jz_label block
Rule 12    jmp -> <empty>
Rule 13    jz -> <empty>
Rule 14    jz_label -> <empty>
Rule 15    new_label -> <empty>
Rule 16    var_declare -> VAR ID = expr ;
Rule 17    var_declare -> VAR ID ;
Rule 18    var_declare -> VAR ID [ NUM ] ;
Rule 19    var_declare -> VAR ID [ NUM ] [ NUM ] ;
Rule 20    stmt -> ID = expr ;
Rule 21    stmt -> expr [ expr ] = expr ;
Rule 22    stmt -> RETURN expr ;
Rule 23    stmt -> RETURN ;
Rule 24    stmt -> PRINTI ( expr ) ;
Rule 25    stmt -> expr ;
Rule 26    expr -> INPUT ( )
Rule 27    expr -> STR ( expr )
Rule 28    expr -> ATOI ( expr )
Rule 29    expr -> expr + expr
Rule 30    expr -> expr - expr
Rule 31    expr -> expr * expr
Rule 32    expr -> expr / expr
Rule 33    expr -> expr % expr
Rule 34    expr -> expr OR expr
Rule 35    expr -> expr AND expr
Rule 36    expr -> expr > expr
Rule 37    expr -> expr < expr
Rule 38    expr -> expr GTE expr
Rule 39    expr -> expr LTE expr
Rule 40    expr -> expr EQ expr
Rule 41    expr -> expr NEQ expr
Rule 42    expr -> expr $ expr
Rule 43    expr -> ! expr
Rule 44    expr -> - expr
Rule 45    expr -> ID
Rule 46    expr -> expr [ expr ]
Rule 47    expr -> STRING
Rule 48    expr -> NUM
Rule 49    expr -> TRUE
Rule 50    expr -> FALSE
Rule 51    expr -> ID ( exprlist )
Rule 52    expr -> ID ( )
Rule 53    expr -> ( expr )
Rule 54    declist -> declist var_declare
Rule 55    declist -> <empty>
Rule 56    funlist -> funlist fun
Rule 57    funlist -> <empty>
Rule 58    stmtlist -> stmtlist stmt
Rule 59    stmtlist -> <empty>
Rule 60    idlist -> idlist , ID
Rule 61    idlist -> ID
Rule 62    exprlist -> exprlist , expr
Rule 63    exprlist -> expr
Rule 64    block -> { stmtlist }
Rule 65    block -> stmt

Terminals, with rules where they appear

!                    : 43
$                    : 42
%                    : 33
(                    : 4 5 7 8 9 10 11 24 26 27 28 51 52 53
)                    : 4 5 7 8 9 10 11 24 26 27 28 51 52 53
*                    : 31
+                    : 29
,                    : 60 62
-                    : 30 44
/                    : 32
;                    : 7 8 16 17 18 19 20 21 22 23 24 25
<                    : 37
=                    : 16 20 21
>                    : 36
AND                  : 35
ATOI                 : 28
DEF                  : 4 5
ELSE                 : 11
EQ                   : 40
FALSE                : 50
GTE                  : 38
ID                   : 6 16 17 18 19 20 45 51 52 60 61
IF                   : 10 11
INPUT                : 26
LTE                  : 39
NEQ                  : 41
NUM                  : 18 19 19 48
OR                   : 34
PRINT                : 7
PRINTI               : 24
PRINTLN              : 8
RETURN               : 22 23
STR                  : 27
STRING               : 47
TRUE                 : 49
VAR                  : 16 17 18 19
WHILE                : 9
[                    : 18 19 19 21 46
]                    : 18 19 19 21 46
error                : 
{                    : 64
}                    : 64

Nonterminals, with rules where they appear

block                : 4 5 9 10 11 11
declist              : 1 54
entrypoint           : 1
expr                 : 7 9 10 11 16 20 21 21 21 22 24 25 27 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44 46 46 53 62 63
exprlist             : 51 62
fun                  : 56
fun_name             : 4 5
funlist              : 1 56
idlist               : 4 60
jmp                  : 11
jz                   : 9 10 11
jz_label             : 11
new_label            : 9
program              : 0
start                : 1
stmt                 : 58 65
stmtlist             : 1 58 64
var_declare          : 54

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declist start funlist entrypoint stmtlist
    (54) declist -> . declist var_declare
    (55) declist -> .

    VAR             reduce using rule 55 (declist -> .)
    DEF             reduce using rule 55 (declist -> .)
    PRINT           reduce using rule 55 (declist -> .)
    PRINTLN         reduce using rule 55 (declist -> .)
    WHILE           reduce using rule 55 (declist -> .)
    IF              reduce using rule 55 (declist -> .)
    ID              reduce using rule 55 (declist -> .)
    RETURN          reduce using rule 55 (declist -> .)
    PRINTI          reduce using rule 55 (declist -> .)
    INPUT           reduce using rule 55 (declist -> .)
    STR             reduce using rule 55 (declist -> .)
    ATOI            reduce using rule 55 (declist -> .)
    !               reduce using rule 55 (declist -> .)
    -               reduce using rule 55 (declist -> .)
    STRING          reduce using rule 55 (declist -> .)
    NUM             reduce using rule 55 (declist -> .)
    TRUE            reduce using rule 55 (declist -> .)
    FALSE           reduce using rule 55 (declist -> .)
    (               reduce using rule 55 (declist -> .)
    $end            reduce using rule 55 (declist -> .)

    program                        shift and go to state 1
    declist                        shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> declist . start funlist entrypoint stmtlist
    (54) declist -> declist . var_declare
    (2) start -> .
    (16) var_declare -> . VAR ID = expr ;
    (17) var_declare -> . VAR ID ;
    (18) var_declare -> . VAR ID [ NUM ] ;
    (19) var_declare -> . VAR ID [ NUM ] [ NUM ] ;

    DEF             reduce using rule 2 (start -> .)
    PRINT           reduce using rule 2 (start -> .)
    PRINTLN         reduce using rule 2 (start -> .)
    WHILE           reduce using rule 2 (start -> .)
    IF              reduce using rule 2 (start -> .)
    ID              reduce using rule 2 (start -> .)
    RETURN          reduce using rule 2 (start -> .)
    PRINTI          reduce using rule 2 (start -> .)
    INPUT           reduce using rule 2 (start -> .)
    STR             reduce using rule 2 (start -> .)
    ATOI            reduce using rule 2 (start -> .)
    !               reduce using rule 2 (start -> .)
    -               reduce using rule 2 (start -> .)
    STRING          reduce using rule 2 (start -> .)
    NUM             reduce using rule 2 (start -> .)
    TRUE            reduce using rule 2 (start -> .)
    FALSE           reduce using rule 2 (start -> .)
    (               reduce using rule 2 (start -> .)
    $end            reduce using rule 2 (start -> .)
    VAR             shift and go to state 5

    start                          shift and go to state 3
    var_declare                    shift and go to state 4

state 3

    (1) program -> declist start . funlist entrypoint stmtlist
    (56) funlist -> . funlist fun
    (57) funlist -> .

    DEF             reduce using rule 57 (funlist -> .)
    PRINT           reduce using rule 57 (funlist -> .)
    PRINTLN         reduce using rule 57 (funlist -> .)
    WHILE           reduce using rule 57 (funlist -> .)
    IF              reduce using rule 57 (funlist -> .)
    ID              reduce using rule 57 (funlist -> .)
    RETURN          reduce using rule 57 (funlist -> .)
    PRINTI          reduce using rule 57 (funlist -> .)
    INPUT           reduce using rule 57 (funlist -> .)
    STR             reduce using rule 57 (funlist -> .)
    ATOI            reduce using rule 57 (funlist -> .)
    !               reduce using rule 57 (funlist -> .)
    -               reduce using rule 57 (funlist -> .)
    STRING          reduce using rule 57 (funlist -> .)
    NUM             reduce using rule 57 (funlist -> .)
    TRUE            reduce using rule 57 (funlist -> .)
    FALSE           reduce using rule 57 (funlist -> .)
    (               reduce using rule 57 (funlist -> .)
    $end            reduce using rule 57 (funlist -> .)

    funlist                        shift and go to state 6

state 4

    (54) declist -> declist var_declare .

    VAR             reduce using rule 54 (declist -> declist var_declare .)
    DEF             reduce using rule 54 (declist -> declist var_declare .)
    PRINT           reduce using rule 54 (declist -> declist var_declare .)
    PRINTLN         reduce using rule 54 (declist -> declist var_declare .)
    WHILE           reduce using rule 54 (declist -> declist var_declare .)
    IF              reduce using rule 54 (declist -> declist var_declare .)
    ID              reduce using rule 54 (declist -> declist var_declare .)
    RETURN          reduce using rule 54 (declist -> declist var_declare .)
    PRINTI          reduce using rule 54 (declist -> declist var_declare .)
    INPUT           reduce using rule 54 (declist -> declist var_declare .)
    STR             reduce using rule 54 (declist -> declist var_declare .)
    ATOI            reduce using rule 54 (declist -> declist var_declare .)
    !               reduce using rule 54 (declist -> declist var_declare .)
    -               reduce using rule 54 (declist -> declist var_declare .)
    STRING          reduce using rule 54 (declist -> declist var_declare .)
    NUM             reduce using rule 54 (declist -> declist var_declare .)
    TRUE            reduce using rule 54 (declist -> declist var_declare .)
    FALSE           reduce using rule 54 (declist -> declist var_declare .)
    (               reduce using rule 54 (declist -> declist var_declare .)
    $end            reduce using rule 54 (declist -> declist var_declare .)


state 5

    (16) var_declare -> VAR . ID = expr ;
    (17) var_declare -> VAR . ID ;
    (18) var_declare -> VAR . ID [ NUM ] ;
    (19) var_declare -> VAR . ID [ NUM ] [ NUM ] ;

    ID              shift and go to state 7


state 6

    (1) program -> declist start funlist . entrypoint stmtlist
    (56) funlist -> funlist . fun
    (3) entrypoint -> .
    (4) fun -> . DEF fun_name ( idlist ) block
    (5) fun -> . DEF fun_name ( ) block

    PRINT           reduce using rule 3 (entrypoint -> .)
    PRINTLN         reduce using rule 3 (entrypoint -> .)
    WHILE           reduce using rule 3 (entrypoint -> .)
    IF              reduce using rule 3 (entrypoint -> .)
    ID              reduce using rule 3 (entrypoint -> .)
    RETURN          reduce using rule 3 (entrypoint -> .)
    PRINTI          reduce using rule 3 (entrypoint -> .)
    INPUT           reduce using rule 3 (entrypoint -> .)
    STR             reduce using rule 3 (entrypoint -> .)
    ATOI            reduce using rule 3 (entrypoint -> .)
    !               reduce using rule 3 (entrypoint -> .)
    -               reduce using rule 3 (entrypoint -> .)
    STRING          reduce using rule 3 (entrypoint -> .)
    NUM             reduce using rule 3 (entrypoint -> .)
    TRUE            reduce using rule 3 (entrypoint -> .)
    FALSE           reduce using rule 3 (entrypoint -> .)
    (               reduce using rule 3 (entrypoint -> .)
    $end            reduce using rule 3 (entrypoint -> .)
    DEF             shift and go to state 10

    entrypoint                     shift and go to state 8
    fun                            shift and go to state 9

state 7

    (16) var_declare -> VAR ID . = expr ;
    (17) var_declare -> VAR ID . ;
    (18) var_declare -> VAR ID . [ NUM ] ;
    (19) var_declare -> VAR ID . [ NUM ] [ NUM ] ;

    =               shift and go to state 11
    ;               shift and go to state 12
    [               shift and go to state 13


state 8

    (1) program -> declist start funlist entrypoint . stmtlist
    (58) stmtlist -> . stmtlist stmt
    (59) stmtlist -> .

    PRINT           reduce using rule 59 (stmtlist -> .)
    PRINTLN         reduce using rule 59 (stmtlist -> .)
    WHILE           reduce using rule 59 (stmtlist -> .)
    IF              reduce using rule 59 (stmtlist -> .)
    ID              reduce using rule 59 (stmtlist -> .)
    RETURN          reduce using rule 59 (stmtlist -> .)
    PRINTI          reduce using rule 59 (stmtlist -> .)
    INPUT           reduce using rule 59 (stmtlist -> .)
    STR             reduce using rule 59 (stmtlist -> .)
    ATOI            reduce using rule 59 (stmtlist -> .)
    !               reduce using rule 59 (stmtlist -> .)
    -               reduce using rule 59 (stmtlist -> .)
    STRING          reduce using rule 59 (stmtlist -> .)
    NUM             reduce using rule 59 (stmtlist -> .)
    TRUE            reduce using rule 59 (stmtlist -> .)
    FALSE           reduce using rule 59 (stmtlist -> .)
    (               reduce using rule 59 (stmtlist -> .)
    $end            reduce using rule 59 (stmtlist -> .)

    stmtlist                       shift and go to state 14

state 9

    (56) funlist -> funlist fun .

    DEF             reduce using rule 56 (funlist -> funlist fun .)
    PRINT           reduce using rule 56 (funlist -> funlist fun .)
    PRINTLN         reduce using rule 56 (funlist -> funlist fun .)
    WHILE           reduce using rule 56 (funlist -> funlist fun .)
    IF              reduce using rule 56 (funlist -> funlist fun .)
    ID              reduce using rule 56 (funlist -> funlist fun .)
    RETURN          reduce using rule 56 (funlist -> funlist fun .)
    PRINTI          reduce using rule 56 (funlist -> funlist fun .)
    INPUT           reduce using rule 56 (funlist -> funlist fun .)
    STR             reduce using rule 56 (funlist -> funlist fun .)
    ATOI            reduce using rule 56 (funlist -> funlist fun .)
    !               reduce using rule 56 (funlist -> funlist fun .)
    -               reduce using rule 56 (funlist -> funlist fun .)
    STRING          reduce using rule 56 (funlist -> funlist fun .)
    NUM             reduce using rule 56 (funlist -> funlist fun .)
    TRUE            reduce using rule 56 (funlist -> funlist fun .)
    FALSE           reduce using rule 56 (funlist -> funlist fun .)
    (               reduce using rule 56 (funlist -> funlist fun .)
    $end            reduce using rule 56 (funlist -> funlist fun .)


state 10

    (4) fun -> DEF . fun_name ( idlist ) block
    (5) fun -> DEF . fun_name ( ) block
    (6) fun_name -> . ID

    ID              shift and go to state 16

    fun_name                       shift and go to state 15

state 11

    (16) var_declare -> VAR ID = . expr ;
    (26) expr -> . INPUT ( )
    (27) expr -> . STR ( expr )
    (28) expr -> . ATOI ( expr )
    (29) expr -> . expr + expr
    (30) expr -> . expr - expr
    (31) expr -> . expr * expr
    (32) expr -> . expr / expr
    (33) expr -> . expr % expr
    (34) expr -> . expr OR expr
    (35) expr -> . expr AND expr
    (36) expr -> . expr > expr
    (37) expr -> . expr < expr
    (38) expr -> . expr GTE expr
    (39) expr -> . expr LTE expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NEQ expr
    (42) expr -> . expr $ expr
    (43) expr -> . ! expr
    (44) expr -> . - expr
    (45) expr -> . ID
    (46) expr -> . expr [ expr ]
    (47) expr -> . STRING
    (48) expr -> . NUM
    (49) expr -> . TRUE
    (50) expr -> . FALSE
    (51) expr -> . ID ( exprlist )
    (52) expr -> . ID ( )
    (53) expr -> . ( expr )

    INPUT           shift and go to state 19
    STR             shift and go to state 21
    ATOI            shift and go to state 22
    !               shift and go to state 24
    -               shift and go to state 23
    ID              shift and go to state 17
    STRING          shift and go to state 25
    NUM             shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    (               shift and go to state 20

    expr                           shift and go to state 18

state 12

    (17) var_declare -> VAR ID ; .

    VAR             reduce using rule 17 (var_declare -> VAR ID ; .)
    DEF             reduce using rule 17 (var_declare -> VAR ID ; .)
    PRINT           reduce using rule 17 (var_declare -> VAR ID ; .)
    PRINTLN         reduce using rule 17 (var_declare -> VAR ID ; .)
    WHILE           reduce using rule 17 (var_declare -> VAR ID ; .)
    IF              reduce using rule 17 (var_declare -> VAR ID ; .)
    ID              reduce using rule 17 (var_declare -> VAR ID ; .)
    RETURN          reduce using rule 17 (var_declare -> VAR ID ; .)
    PRINTI          reduce using rule 17 (var_declare -> VAR ID ; .)
    INPUT           reduce using rule 17 (var_declare -> VAR ID ; .)
    STR             reduce using rule 17 (var_declare -> VAR ID ; .)
    ATOI            reduce using rule 17 (var_declare -> VAR ID ; .)
    !               reduce using rule 17 (var_declare -> VAR ID ; .)
    -               reduce using rule 17 (var_declare -> VAR ID ; .)
    STRING          reduce using rule 17 (var_declare -> VAR ID ; .)
    NUM             reduce using rule 17 (var_declare -> VAR ID ; .)
    TRUE            reduce using rule 17 (var_declare -> VAR ID ; .)
    FALSE           reduce using rule 17 (var_declare -> VAR ID ; .)
    (               reduce using rule 17 (var_declare -> VAR ID ; .)
    $end            reduce using rule 17 (var_declare -> VAR ID ; .)


state 13

    (18) var_declare -> VAR ID [ . NUM ] ;
    (19) var_declare -> VAR ID [ . NUM ] [ NUM ] ;

    NUM             shift and go to state 29


state 14

    (1) program -> declist start funlist entrypoint stmtlist .
    (58) stmtlist -> stmtlist . stmt
    (7) stmt -> . PRINT ( expr ) ;
    (8) stmt -> . PRINTLN ( ) ;
    (9) stmt -> . WHILE new_label ( expr ) jz block
    (10) stmt -> . IF ( expr ) jz block
    (11) stmt -> . IF ( expr ) jz block ELSE jmp jz_label block
    (20) stmt -> . ID = expr ;
    (21) stmt -> . expr [ expr ] = expr ;
    (22) stmt -> . RETURN expr ;
    (23) stmt -> . RETURN ;
    (24) stmt -> . PRINTI ( expr ) ;
    (25) stmt -> . expr ;
    (26) expr -> . INPUT ( )
    (27) expr -> . STR ( expr )
    (28) expr -> . ATOI ( expr )
    (29) expr -> . expr + expr
    (30) expr -> . expr - expr
    (31) expr -> . expr * expr
    (32) expr -> . expr / expr
    (33) expr -> . expr % expr
    (34) expr -> . expr OR expr
    (35) expr -> . expr AND expr
    (36) expr -> . expr > expr
    (37) expr -> . expr < expr
    (38) expr -> . expr GTE expr
    (39) expr -> . expr LTE expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NEQ expr
    (42) expr -> . expr $ expr
    (43) expr -> . ! expr
    (44) expr -> . - expr
    (45) expr -> . ID
    (46) expr -> . expr [ expr ]
    (47) expr -> . STRING
    (48) expr -> . NUM
    (49) expr -> . TRUE
    (50) expr -> . FALSE
    (51) expr -> . ID ( exprlist )
    (52) expr -> . ID ( )
    (53) expr -> . ( expr )

    $end            reduce using rule 1 (program -> declist start funlist entrypoint stmtlist .)
    PRINT           shift and go to state 31
    PRINTLN         shift and go to state 33
    WHILE           shift and go to state 34
    IF              shift and go to state 35
    ID              shift and go to state 36
    RETURN          shift and go to state 37
    PRINTI          shift and go to state 38
    INPUT           shift and go to state 19
    STR             shift and go to state 21
    ATOI            shift and go to state 22
    !               shift and go to state 24
    -               shift and go to state 23
    STRING          shift and go to state 25
    NUM             shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    (               shift and go to state 20

    stmt                           shift and go to state 30
    expr                           shift and go to state 32

state 15

    (4) fun -> DEF fun_name . ( idlist ) block
    (5) fun -> DEF fun_name . ( ) block

    (               shift and go to state 39


state 16

    (6) fun_name -> ID .

    (               reduce using rule 6 (fun_name -> ID .)


state 17

    (45) expr -> ID .
    (51) expr -> ID . ( exprlist )
    (52) expr -> ID . ( )

    ;               reduce using rule 45 (expr -> ID .)
    +               reduce using rule 45 (expr -> ID .)
    -               reduce using rule 45 (expr -> ID .)
    *               reduce using rule 45 (expr -> ID .)
    /               reduce using rule 45 (expr -> ID .)
    %               reduce using rule 45 (expr -> ID .)
    OR              reduce using rule 45 (expr -> ID .)
    AND             reduce using rule 45 (expr -> ID .)
    >               reduce using rule 45 (expr -> ID .)
    <               reduce using rule 45 (expr -> ID .)
    GTE             reduce using rule 45 (expr -> ID .)
    LTE             reduce using rule 45 (expr -> ID .)
    EQ              reduce using rule 45 (expr -> ID .)
    NEQ             reduce using rule 45 (expr -> ID .)
    $               reduce using rule 45 (expr -> ID .)
    [               reduce using rule 45 (expr -> ID .)
    )               reduce using rule 45 (expr -> ID .)
    ,               reduce using rule 45 (expr -> ID .)
    ]               reduce using rule 45 (expr -> ID .)
    (               shift and go to state 40


state 18

    (16) var_declare -> VAR ID = expr . ;
    (29) expr -> expr . + expr
    (30) expr -> expr . - expr
    (31) expr -> expr . * expr
    (32) expr -> expr . / expr
    (33) expr -> expr . % expr
    (34) expr -> expr . OR expr
    (35) expr -> expr . AND expr
    (36) expr -> expr . > expr
    (37) expr -> expr . < expr
    (38) expr -> expr . GTE expr
    (39) expr -> expr . LTE expr
    (40) expr -> expr . EQ expr
    (41) expr -> expr . NEQ expr
    (42) expr -> expr . $ expr
    (46) expr -> expr . [ expr ]

    ;               shift and go to state 41
    +               shift and go to state 42
    -               shift and go to state 43
    *               shift and go to state 44
    /               shift and go to state 45
    %               shift and go to state 46
    OR              shift and go to state 47
    AND             shift and go to state 48
    >               shift and go to state 49
    <               shift and go to state 50
    GTE             shift and go to state 51
    LTE             shift and go to state 52
    EQ              shift and go to state 53
    NEQ             shift and go to state 54
    $               shift and go to state 55
    [               shift and go to state 56


state 19

    (26) expr -> INPUT . ( )

    (               shift and go to state 57


state 20

    (53) expr -> ( . expr )
    (26) expr -> . INPUT ( )
    (27) expr -> . STR ( expr )
    (28) expr -> . ATOI ( expr )
    (29) expr -> . expr + expr
    (30) expr -> . expr - expr
    (31) expr -> . expr * expr
    (32) expr -> . expr / expr
    (33) expr -> . expr % expr
    (34) expr -> . expr OR expr
    (35) expr -> . expr AND expr
    (36) expr -> . expr > expr
    (37) expr -> . expr < expr
    (38) expr -> . expr GTE expr
    (39) expr -> . expr LTE expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NEQ expr
    (42) expr -> . expr $ expr
    (43) expr -> . ! expr
    (44) expr -> . - expr
    (45) expr -> . ID
    (46) expr -> . expr [ expr ]
    (47) expr -> . STRING
    (48) expr -> . NUM
    (49) expr -> . TRUE
    (50) expr -> . FALSE
    (51) expr -> . ID ( exprlist )
    (52) expr -> . ID ( )
    (53) expr -> . ( expr )

    INPUT           shift and go to state 19
    STR             shift and go to state 21
    ATOI            shift and go to state 22
    !               shift and go to state 24
    -               shift and go to state 23
    ID              shift and go to state 17
    STRING          shift and go to state 25
    NUM             shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    (               shift and go to state 20

    expr                           shift and go to state 58

state 21

    (27) expr -> STR . ( expr )

    (               shift and go to state 59


state 22

    (28) expr -> ATOI . ( expr )

    (               shift and go to state 60


state 23

    (44) expr -> - . expr
    (26) expr -> . INPUT ( )
    (27) expr -> . STR ( expr )
    (28) expr -> . ATOI ( expr )
    (29) expr -> . expr + expr
    (30) expr -> . expr - expr
    (31) expr -> . expr * expr
    (32) expr -> . expr / expr
    (33) expr -> . expr % expr
    (34) expr -> . expr OR expr
    (35) expr -> . expr AND expr
    (36) expr -> . expr > expr
    (37) expr -> . expr < expr
    (38) expr -> . expr GTE expr
    (39) expr -> . expr LTE expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NEQ expr
    (42) expr -> . expr $ expr
    (43) expr -> . ! expr
    (44) expr -> . - expr
    (45) expr -> . ID
    (46) expr -> . expr [ expr ]
    (47) expr -> . STRING
    (48) expr -> . NUM
    (49) expr -> . TRUE
    (50) expr -> . FALSE
    (51) expr -> . ID ( exprlist )
    (52) expr -> . ID ( )
    (53) expr -> . ( expr )

    INPUT           shift and go to state 19
    STR             shift and go to state 21
    ATOI            shift and go to state 22
    !               shift and go to state 24
    -               shift and go to state 23
    ID              shift and go to state 17
    STRING          shift and go to state 25
    NUM             shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    (               shift and go to state 20

    expr                           shift and go to state 61

state 24

    (43) expr -> ! . expr
    (26) expr -> . INPUT ( )
    (27) expr -> . STR ( expr )
    (28) expr -> . ATOI ( expr )
    (29) expr -> . expr + expr
    (30) expr -> . expr - expr
    (31) expr -> . expr * expr
    (32) expr -> . expr / expr
    (33) expr -> . expr % expr
    (34) expr -> . expr OR expr
    (35) expr -> . expr AND expr
    (36) expr -> . expr > expr
    (37) expr -> . expr < expr
    (38) expr -> . expr GTE expr
    (39) expr -> . expr LTE expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NEQ expr
    (42) expr -> . expr $ expr
    (43) expr -> . ! expr
    (44) expr -> . - expr
    (45) expr -> . ID
    (46) expr -> . expr [ expr ]
    (47) expr -> . STRING
    (48) expr -> . NUM
    (49) expr -> . TRUE
    (50) expr -> . FALSE
    (51) expr -> . ID ( exprlist )
    (52) expr -> . ID ( )
    (53) expr -> . ( expr )

    INPUT           shift and go to state 19
    STR             shift and go to state 21
    ATOI            shift and go to state 22
    !               shift and go to state 24
    -               shift and go to state 23
    ID              shift and go to state 17
    STRING          shift and go to state 25
    NUM             shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    (               shift and go to state 20

    expr                           shift and go to state 62

state 25

    (47) expr -> STRING .

    ;               reduce using rule 47 (expr -> STRING .)
    +               reduce using rule 47 (expr -> STRING .)
    -               reduce using rule 47 (expr -> STRING .)
    *               reduce using rule 47 (expr -> STRING .)
    /               reduce using rule 47 (expr -> STRING .)
    %               reduce using rule 47 (expr -> STRING .)
    OR              reduce using rule 47 (expr -> STRING .)
    AND             reduce using rule 47 (expr -> STRING .)
    >               reduce using rule 47 (expr -> STRING .)
    <               reduce using rule 47 (expr -> STRING .)
    GTE             reduce using rule 47 (expr -> STRING .)
    LTE             reduce using rule 47 (expr -> STRING .)
    EQ              reduce using rule 47 (expr -> STRING .)
    NEQ             reduce using rule 47 (expr -> STRING .)
    $               reduce using rule 47 (expr -> STRING .)
    [               reduce using rule 47 (expr -> STRING .)
    )               reduce using rule 47 (expr -> STRING .)
    ,               reduce using rule 47 (expr -> STRING .)
    ]               reduce using rule 47 (expr -> STRING .)


state 26

    (48) expr -> NUM .

    ;               reduce using rule 48 (expr -> NUM .)
    +               reduce using rule 48 (expr -> NUM .)
    -               reduce using rule 48 (expr -> NUM .)
    *               reduce using rule 48 (expr -> NUM .)
    /               reduce using rule 48 (expr -> NUM .)
    %               reduce using rule 48 (expr -> NUM .)
    OR              reduce using rule 48 (expr -> NUM .)
    AND             reduce using rule 48 (expr -> NUM .)
    >               reduce using rule 48 (expr -> NUM .)
    <               reduce using rule 48 (expr -> NUM .)
    GTE             reduce using rule 48 (expr -> NUM .)
    LTE             reduce using rule 48 (expr -> NUM .)
    EQ              reduce using rule 48 (expr -> NUM .)
    NEQ             reduce using rule 48 (expr -> NUM .)
    $               reduce using rule 48 (expr -> NUM .)
    [               reduce using rule 48 (expr -> NUM .)
    )               reduce using rule 48 (expr -> NUM .)
    ,               reduce using rule 48 (expr -> NUM .)
    ]               reduce using rule 48 (expr -> NUM .)


state 27

    (49) expr -> TRUE .

    ;               reduce using rule 49 (expr -> TRUE .)
    +               reduce using rule 49 (expr -> TRUE .)
    -               reduce using rule 49 (expr -> TRUE .)
    *               reduce using rule 49 (expr -> TRUE .)
    /               reduce using rule 49 (expr -> TRUE .)
    %               reduce using rule 49 (expr -> TRUE .)
    OR              reduce using rule 49 (expr -> TRUE .)
    AND             reduce using rule 49 (expr -> TRUE .)
    >               reduce using rule 49 (expr -> TRUE .)
    <               reduce using rule 49 (expr -> TRUE .)
    GTE             reduce using rule 49 (expr -> TRUE .)
    LTE             reduce using rule 49 (expr -> TRUE .)
    EQ              reduce using rule 49 (expr -> TRUE .)
    NEQ             reduce using rule 49 (expr -> TRUE .)
    $               reduce using rule 49 (expr -> TRUE .)
    [               reduce using rule 49 (expr -> TRUE .)
    )               reduce using rule 49 (expr -> TRUE .)
    ,               reduce using rule 49 (expr -> TRUE .)
    ]               reduce using rule 49 (expr -> TRUE .)


state 28

    (50) expr -> FALSE .

    ;               reduce using rule 50 (expr -> FALSE .)
    +               reduce using rule 50 (expr -> FALSE .)
    -               reduce using rule 50 (expr -> FALSE .)
    *               reduce using rule 50 (expr -> FALSE .)
    /               reduce using rule 50 (expr -> FALSE .)
    %               reduce using rule 50 (expr -> FALSE .)
    OR              reduce using rule 50 (expr -> FALSE .)
    AND             reduce using rule 50 (expr -> FALSE .)
    >               reduce using rule 50 (expr -> FALSE .)
    <               reduce using rule 50 (expr -> FALSE .)
    GTE             reduce using rule 50 (expr -> FALSE .)
    LTE             reduce using rule 50 (expr -> FALSE .)
    EQ              reduce using rule 50 (expr -> FALSE .)
    NEQ             reduce using rule 50 (expr -> FALSE .)
    $               reduce using rule 50 (expr -> FALSE .)
    [               reduce using rule 50 (expr -> FALSE .)
    )               reduce using rule 50 (expr -> FALSE .)
    ,               reduce using rule 50 (expr -> FALSE .)
    ]               reduce using rule 50 (expr -> FALSE .)


state 29

    (18) var_declare -> VAR ID [ NUM . ] ;
    (19) var_declare -> VAR ID [ NUM . ] [ NUM ] ;

    ]               shift and go to state 63


state 30

    (58) stmtlist -> stmtlist stmt .

    PRINT           reduce using rule 58 (stmtlist -> stmtlist stmt .)
    PRINTLN         reduce using rule 58 (stmtlist -> stmtlist stmt .)
    WHILE           reduce using rule 58 (stmtlist -> stmtlist stmt .)
    IF              reduce using rule 58 (stmtlist -> stmtlist stmt .)
    ID              reduce using rule 58 (stmtlist -> stmtlist stmt .)
    RETURN          reduce using rule 58 (stmtlist -> stmtlist stmt .)
    PRINTI          reduce using rule 58 (stmtlist -> stmtlist stmt .)
    INPUT           reduce using rule 58 (stmtlist -> stmtlist stmt .)
    STR             reduce using rule 58 (stmtlist -> stmtlist stmt .)
    ATOI            reduce using rule 58 (stmtlist -> stmtlist stmt .)
    !               reduce using rule 58 (stmtlist -> stmtlist stmt .)
    -               reduce using rule 58 (stmtlist -> stmtlist stmt .)
    STRING          reduce using rule 58 (stmtlist -> stmtlist stmt .)
    NUM             reduce using rule 58 (stmtlist -> stmtlist stmt .)
    TRUE            reduce using rule 58 (stmtlist -> stmtlist stmt .)
    FALSE           reduce using rule 58 (stmtlist -> stmtlist stmt .)
    (               reduce using rule 58 (stmtlist -> stmtlist stmt .)
    $end            reduce using rule 58 (stmtlist -> stmtlist stmt .)
    }               reduce using rule 58 (stmtlist -> stmtlist stmt .)


state 31

    (7) stmt -> PRINT . ( expr ) ;

    (               shift and go to state 64


state 32

    (21) stmt -> expr . [ expr ] = expr ;
    (25) stmt -> expr . ;
    (29) expr -> expr . + expr
    (30) expr -> expr . - expr
    (31) expr -> expr . * expr
    (32) expr -> expr . / expr
    (33) expr -> expr . % expr
    (34) expr -> expr . OR expr
    (35) expr -> expr . AND expr
    (36) expr -> expr . > expr
    (37) expr -> expr . < expr
    (38) expr -> expr . GTE expr
    (39) expr -> expr . LTE expr
    (40) expr -> expr . EQ expr
    (41) expr -> expr . NEQ expr
    (42) expr -> expr . $ expr
    (46) expr -> expr . [ expr ]
